[package]
name = "okex-rs-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
reqwest = { version = "0.11.8", features = ["json"] }
tokio-tungstenite = { version = "0.15.0", features = ["connect", "native-tls"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
anyhow = "1.0.52"
url = "2.2.2"
structopt = "0.3.23"
futures-util = "0.3.17"
streamunordered = "0.5.2"
tonic = "0.5.2"
prost = "0.8.0"
chrono = "0.4.19"
hmac-sha256 = "1.1.1"
base64 = "0.13.0"